resources/css/kt-framing.css
/* ... */
.form_actions .form_cancel {
    margin-left: 2em;
}

/* unframed (single button) forms */
#content .noframe fieldset
{
   border-width: 0px;
   padding: 0;
}

#content .noframe .form_actions
{
   margin-top: 0;
}

/* old cancel style */

#content a.ktCancelLink {
    border: 1px solid #888;
    background: #eee;
    color: black;
    font-weight: normal;
    font-size: 90%;
    padding: 2px 0.65em 1px 0.65em;
    text-transform: lowercase;
    text-decoration: none;
}

#content a.ktCancelLink:hover {
    color: black;
    text-decoration: none;
    border: 1px solid #888;
    cursor: default;
}

#content .field
{
    margin-bottom: 1.5em;
}

#content .field.error
{
    padding: 0.5em 1em;
    border: 1px solid #ffc21e;
    background: #ffdd80;
}
#content .field.error .errorMessage
{
    display: block;
}

#content .field.error label .required
{
    color: #ffdd80;
}

#content .field label
{
    display: block;
    font-weight: bold;
}

#content .field .descriptiveText
{
    margin: 0;
    line-height: 1.4em;
    margin-bottom: 0.5em;
}

#content .field label .required
{
    margin-left: 0.5em;
    padding-left: 10px;
    color: white;
    background: transparent url(../../resources/graphics/required.png) center left no-repeat;
}

.errorMessage
{
    font-weight: bold;
}

#content .field .errorMessage
{
    display: none;
}

#content .form_actions {
    margin-top: 0.5em;
    padding-top: 0.5em;
    border-top: 1px solid #efefef;
}

#content .form_actions input.destructive
{
    border: 1px solid #ffc21e;
    background: #ffdd80;
}

#content h2
{
    font-family: "Lucida Grande", "Bitstream Vera Sans", Tahoma, sans-serif;
    padding-bottom: 0.25em;
    border-width: 0 0 0 0;
    border-style: solid;
    border-color: #eee;
    font-size: large;
    color: #333;
}

#content .actionitem {
    margin-top: 1em;
    font-weight: bold;
}

#content .actionmessage
{
    padding-bottom: 0.5em;
    border-bottom: 1px dashed #ccc;
    margin-left: 0;
    padding-left: 2em;
}

/* ---------------------- detail view ---------------------------------- */

/* metadata display */
.metadata dt
{
    font-weight: bold;
    /*this seems to force a huge space above the container in firefox*/
    /*clear: left;*/
}

.metadata.versioned dd div {

    padding: 0.2em 0.5em;
    border-style: solid;
    border-color: #ccc;
    border-width: 1px 1px 1px 0;
}

.metadata.versioned dd .previous {
    width: 35%;
    float: left;
    display: block;
    background: #eee;
}
.metadata.versioned dd .current {
    width: 35%;
    float: left;
    display: block;
    border-width: 1px;
}
.metadata.versioned dd .current.different {
    background-color: #fff2b8;
/*
    padding-left: 25px;
    background: transparent  url(../../thirdparty/icon-theme/16x16/status/dialog-information.png) center left no-repeat;
*/
}

.metadata.versioned dd .previous.different {
    background-color: #e9dda8;
/*
    padding-left: 25px;
    background: transparent  url(../../thirdparty/icon-theme/16x16/status/dialog-information.png) center left no-repeat;
*/
}

/*  --- table version --- */

.metadatatable {
    border-width: 0 1px 0 1px;
    border-style: solid;
    border-color: #ccc;
    width: 100%;
}

.metadatatable.narrow {
    width: auto !important;
}

.metadatatable .first th,
.metadatatable .first td {
    border-top: 1px solid #ccc;
}

.metadatatable th {
    text-align: left;
    width: 30% !important;
    border-bottom: 1px dotted #ccc;
    vertical-align: top;
    padding: 0.5em;
    background-color: #eee;
    font-weight: normal;
}

.metadatatable td {
    border-bottom: 1px dotted #ccc;
    vertical-align: top;
    padding: 0.5em;
    font-weight: bold;
}

.metadatatable .versioned td {
    width: 35%;
}

.metadatatable td.current.different {
    background-color: #fff2b8;
}

.metadatatable td.previous.different {
    background-color: #e9dda8;
}

.document_details .document_history thead th {
    text-align: left;
    border-bottom: 1px solid #666;
}

.document_history {
    width: 100%;
}

.document_history th {
    text-align: left;
}

.document_history td {
    text-align: left;
    border-bottom: 1px solid #ccc;
}

.document_history tbody .username,
.document_history tbody .date
{
    white-space: nowrap;
    padding-right: 1em;
}

.document_history tbody .action
{
    white-space: nowrap;
    padding-right: 1em;
    font-weight: bold;
}

.document_history tbody tr.odd td
{
    background-color: #fafafa;
}

.detail_fieldset
{
    display: block;
    margin-top: 1em;
    overflow: hidden;
}

.detail_fieldset h3
{
    margin: 0em 0 0.25em 0;
}


/* ----------------------- collection view ----------------------------- */

.kt_collection
{
    width: 100%;
    white-space: nowrap !important;
    border: 1px solid #ccc;
}

.kt_collection.narrow {
    width: auto;
}

.kt_collection thead th {
    border-bottom: 1px solid #888;
    text-align: left;
    white-space: normal !important;
}

.kt_collection th.sort_on.sort_asc {
    border-left: 1px solid #ccc;
    border-right: 1px solid #ccc;

    background: transparent url(../../resources/graphics/sort_asc.png) center right no-repeat;
}

.kt_collection th.sort_on.sort_desc {
    border-left: 1px solid #ccc;
    border-right: 1px solid #ccc;

    background: transparent url(../../resources/graphics/sort_desc.png) center right no-repeat;
}

.kt_collection th,
.kt_collection td {
    padding: 0.25em 0.5em;
    white-space: nowrap !important;
    overflow: hidden;
    vertical-align: top;
}

.kt_collection td.title,
.kt_collection td.datecolumn
{
    white-space: normal !important;
}

.centered, .kt_collection thead th.centered { text-align: center; }
.centered .ktAction { margin-left: auto; margin-right: auto; width: 100%;  background-position: top center;}

.kt_collection td.sort_on {
    border-left: 1px solid #ccc;
    border-right: 1px solid #ccc;
    background-color: #fafafa;
}

.kt_collection .folder_row.odd td {
    background-color: #ededed;
}
/* ... */

